@@ -5,6 +5,7 @@ import com.amigoscode._3_oop._3_abstractclasses.Rectangle;
 import com.amigoscode._3_oop._3_abstractclasses.Shape;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 
 /**
@@ -24,42 +25,60 @@ import java.util.List;
  */
 public class ShapeCalculator {
 
-    // TODO: 1 - Create a method: void printShapeArea(Shape shape)
-    //   Print: "The <className> has an area of <area>"
-    //   Use shape.getClass().getSimpleName() to get the class name.
-    //   Use String.format("%.2f", shape.area()) for formatting.
+    public static void printShapeArea(Shape shape) {
+        System.out.println("The %s has an area of %.2f".formatted(
+                shape.getClass().getSimpleName(),
+                shape.area()));
+    }
 
+    public static double totalArea(List<Shape> shapes) {
+        return shapes.stream()
+                .mapToDouble(Shape::area)
+                .sum();
+    }
 
-    // TODO: 2 - Create a method: double totalArea(List<Shape> shapes)
-    //   Iterate over all shapes and return the sum of their areas.
+    public static Shape largestShape(List<Shape> shapes) {
+        if (shapes.isEmpty()) return null;
 
+        return shapes.stream()
+                .sorted(Comparator.comparingDouble(Shape::area).reversed())
+                .findFirst()
+                .get();
+    }
 
-    // TODO: 3 - Create a method: Shape largestShape(List<Shape> shapes)
-    //   Return the shape with the largest area.
-    //   If the list is empty, return null.
+    public static String describeShape(Shape shape) {
+        if (shape instanceof Circle c) {
+            return "Circle detected with area: " + c.area();
+        } else if (shape instanceof Rectangle r) {
+            return "Rectangle detected with area: " + r.area();
+        }
+        return "Unknown shape with area: " + shape.area();
+    }
 
+    public static String formatSummary(List<Shape> shapes) {
+        return "Summary: %d shapes, total area: %.2f, largest area: %.2f".formatted(
+                shapes.size(),
+                totalArea(shapes),
+                largestShape(shapes).area()
+        );
+    }
 
-    // TODO: 4 - Create a method: String describeShape(Shape shape)
-    //   Use instanceof with pattern matching (Java 16+) to return
-    //   specific descriptions:
-    //   - If shape is a Circle c: return "Circle with radius info"
-    //     (just return "Circle detected with area: " + c.area())
-    //   - If shape is a Rectangle r: return "Rectangle detected with area: " + r.area()
-    //   - Otherwise: return "Unknown shape with area: " + shape.area()
-
-
-    // TODO: 5 - Create a method: String formatSummary(List<Shape> shapes)
-    //   Return a formatted summary string like:
-    //   "Summary: <N> shapes, total area: <totalArea>, largest area: <largestArea>"
-    //   Use the totalArea() and largestShape() methods you already wrote.
-
-
-    // TODO: 6 - In main, create a List<Shape> with at least two Circles
-    //   and two Rectangles. Call all the methods above and print results.
-    //   This demonstrates polymorphism: the same method handles
-    //   different shape types seamlessly.
 
     public static void main(String[] args) {
-        // Complete TODO 6 here.
+        Shape circle1 = new Circle(10.0);
+        Shape circle2 = new Circle(5.0);
+        Shape rectangle1 = new Rectangle(10.0, 10.0);
+        Shape rectangle2 = new Rectangle(15.0, 10.0);
+
+        List<Shape> shapes = List.of(circle1, circle2, rectangle1, rectangle2);
+
+        printShapeArea(circle1);
+        printShapeArea(rectangle1);
+        System.out.println("Total area: " + totalArea(shapes));
+        System.out.println("Largest shape when empty: " + largestShape(List.of()));
+        System.out.println("Largest shape: " + largestShape(shapes));
+        describeShape(rectangle1);
+        describeShape(circle1);
+        System.out.println(formatSummary(shapes));
     }
 }
